--- a/plugin.yml
+++ b/plugin.yml
@@ -17,3 +17,6 @@ commands:
   addteam:
     description: Adds a team
     usage: /addteam
+  getteams:
+    description: List current teams
+    usage: /getteams
